--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,11 +12,19 @@
     <string name="contraseña">Contraseña</string>
     <string name="iniciar_sesion">Iniciar sesion</string>
     <string name="cerrar_sesion">Cerrar sesion</string>
+    <string name="err_campo_invalido">Se han ingreado campos vacios o valores invalidos</string>
+    <string name="se_ha_iniciado_sesion_como">Se ha iniciado sesion como</string>
+    <string name="se_ha_cerrado_la_sesion">Se ha cerrado la sesion</string>
+    <string name="lista_vacia">Lista vacia</string>
 
     <string name="tipo_comp_todos">Todos</string>
     <string name="tipo_comp_luz_roja">Luz roja</string>
     <string name="tipo_comp_mal_parqueo">Mal parqueo</string>
     <string name="tipo_comp_papeles_vencidos">Papeles vencidos</string>
+
+    <string name="shared_pref_login" translatable="false">_shared_pref_login</string>
+    <string name="pref_current_user" translatable="false">_pref_current_user</string>
+    <string name="pref_current_password" translatable="false">_pref_current_password</string>
 
     <string name="glyph_save" translatable="false">&#xe161;</string>
     <string name="glyph_remove" translatable="false">&#xe872;</string>
